// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`file 1`] = `"fil_01tvcqmbbf8dkkejz6y69ywvgfsh9gyn1xjweyb9zgv0sf4752446g"`;

exports[`file 2`] = `"{"contents":"lef_015258d9wz42hxdq6ds9vh7fnet5w7k0mpqqx7j4zt59hdjwkvz3w0"}"`;

exports[`file 3`] = `
"{
  "complete": true,
  "count": 2,
  "depth": 2,
  "weight": 86
}"
`;

exports[`cycle 1`] = `"dir_01ypytembqa00drqa54zm8ykvqawve3y50avv44tsfgnxdx2vkrweg"`;

exports[`cycle 2`] = `"{"graph":"gph_01836xbj5z0q8m03yyzewgegg1wq40m6psbgd5cem7davts7q4b0x0","node":1}"`;

exports[`cycle 3`] = `
"{
  "complete": true,
  "count": 2,
  "depth": 2,
  "weight": 164
}"
`;

exports[`executable 1`] = `"fil_017ywcxv0d0f712w8c7z77szz4emsr533se6jjv27xrcj670k30av0"`;

exports[`executable 2`] = `"{"contents":"lef_01nw9mkefnz6gtd8209qn3dq6996dwp9e9nq0h5dycka9wns0z69h0","executable":true}"`;

exports[`executable 3`] = `
"{
  "complete": true,
  "count": 2,
  "depth": 2,
  "weight": 91
}"
`;
